# PalmPalm

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/assets/audio/: .gitignore  generate.sh
backend/src/: agitation_engine.py  agitation_server.py  gemini_audio_poc.py  gemini_poc.py  gemini_session.py  live_session.py  main.py  mock_gemini_session.py  serial_reader.py  two_stage_session.py
backend/tests/: test_agitation_engine.py  test_agitation_server.py  test_live_session.py  test_main.py  test_mock_gemini_session.py  test_serial_reader.py  test_two_stage_session.py
docs/: frontend-overview.md  handoff-2026-03-12.md
docs/plans/: 2026-03-10-palmpalm-design.md  2026-03-10-palmpalm-implementation-plan.md  2026-03-11-mock-setup-design.md  2026-03-11-mock-setup.md  2026-03-12-mic-input-gemini-design.md  2026-03-12-turn-based-design.md  2026-03-12-turn-based.md  2026-03-13-agitation-server-design.md  2026-03-13-agitation-server.md  2026-03-13-gemini-tts-design.md  2026-03-13-gemini-tts.md  2026-03-13-llm-session-phase-design.md  2026-03-13-llm-session-phase.md  2026-03-13-sse-tts-no-websocket.md  2026-03-13-turn-management-design.md  2026-03-13-turn-management.md  2026-03-14-prompt-design.md  2026-03-14-prompt-refactor.md  2026-03-15-live-api-websocket-design.md  (+3 more)
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend_backup/: package-lock.json  vite.config.js
pico/: README.md  main.py  serial_bridge.py
raspberry_pi/: server.py
raspi/: sensor.py
(+36 files in other folders)
